Fixed wide image overflow

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -77,6 +77,7 @@ body {
 .media video, .media img {
     max-height: 65vh;
     border-radius: .5em;
+    max-width: 100%;
 }
 
 .error {
